Fix bottom details overlap issue

--- a/web/static/sass/partials/_home.scss
+++ b/web/static/sass/partials/_home.scss
@@ -203,7 +203,6 @@ li.fab-categories-list:hover{
 }
 .ui-view-container{
   width: 100%;
-  min-height: 690px;
   padding:0px 20px;
 }
 .profile-fab-section
